--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <h1>Przewodnik po stolicach Europy</h1>
     </header>
     <main>
+        <section class="berlin">
+            <h2>Berlin</h2>
+            <img src="img/berlin.jpg" alt="Panorama Berlina">
+          </section>
+          
         <section class="lisbon">
             <h2>Lizbona</h2>
             <img src="./img/lizbona.jpg" alt="">
