Dodano podstronę Wiednia
Umieszczono zdjęcie w katalogu img

Edytowano sekcję HTML

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <img src="./img/lizbona.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime repudiandae porro expedita corrupti distinctio optio reprehenderit tenetur at, illum voluptates earum fugiat temporibus, dolores quidem, minus eveniet magni obcaecati eaque!</p>
         </section>
+        <section>
+            <h2>Wieden</h2>
+            <img src="./img/wieden.jpg" alt=””>
+            </section>
     </main>
     <footer>
         <p>Projekt WSB Merito Gdańsk 2025</p>
