Dodanie stolicy - Madryt

--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Przewodnik po stolicach Europy</h1>
+      <h1>Przewodnik po stolicach Europy</h1>
     </header>
     <main>
-        <section class="berlin">
-            <h2>Berlin</h2>
-            <img src="img/berlin.jpg" alt="Panorama Berlina">
-            <p>Berlin – stolica, największe miasto Niemiec i zarazem kraj związkowy.
-                 Zajmuje powierzchnię ok. 891,70 km² i zamieszkuje go 3 878 100 osób (31 grudnia 2023).
-                  Jest największym
-                 miastem w Unii Europejskiej pod względem liczby mieszkańców w granicach administracyjnych.</p>
-          </section>
-          
-        <section class="lisbon">
-            <h2>Lizbona</h2>
-            <img src="./img/lizbona.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime repudiandae porro expedita corrupti distinctio optio reprehenderit tenetur at, illum voluptates earum fugiat temporibus, dolores quidem, minus eveniet magni obcaecati eaque!</p>
-        </section>
-        <section>
-            <h2>Wieden</h2>
-            <img src="./img/wieden.jpg" alt=””>
-            </section>
+      <section class="berlin">
+        <h2>Berlin</h2>
+        <img src="img/berlin.jpg" alt="Panorama Berlina" />
+        <p>
+          Berlin – stolica, największe miasto Niemiec i zarazem kraj związkowy.
+          Zajmuje powierzchnię ok. 891,70 km² i zamieszkuje go 3 878 100 osób
+          (31 grudnia 2023). Jest największym miastem w Unii Europejskiej pod
+          względem liczby mieszkańców w granicach administracyjnych.
+        </p>
+      </section>
+
+      <section class="lisbon">
+        <h2>Lizbona</h2>
+        <img src="./img/lizbona.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+          repudiandae porro expedita corrupti distinctio optio reprehenderit
+          tenetur at, illum voluptates earum fugiat temporibus, dolores quidem,
+          minus eveniet magni obcaecati eaque!
+        </p>
+      </section>
+      <section>
+        <h2>Wieden</h2>
+        <img src="./img/wieden.jpg" alt="””" />
+      </section>
+      <section>
+        <h2>Madryt</h2>
+        <img src=”./img/Madryt-jakub-pala.jpg” alt=””>
+      </section>
     </main>
     <footer>
-        <p>Projekt WSB Merito Gdańsk 2025</p>
+      <p>Projekt WSB Merito Gdańsk 2025</p>
     </footer>
-</body>
+  </body>
 </html>
