--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <h2>Wieden</h2>
             <img src="./img/wieden.jpg" alt=””>
         </section>
+        <section>
+            <h2>Gniezno</h2>
+            <img src="./img/gniezno.jpg" alt="">
+            <p> Gniezno to stara stolica Polski przed Krakowem i Warszawą</p>
+        </section>
 
     </main>
     <footer>
