--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <h2>Wieden</h2>
             <img src="./img/wieden.jpg" alt=””>
         </section>
+      <section>
+            <h2>Budapeszt</h2>
+            <img src="./img/budapeszt.jpg" alt=””>
+        </section>
+
 
     </main>
     <footer>
