--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <h1>Przewodnik po stolicach Europy</h1>
     </header>
     <main>
-      <section>
-        <h2>Madryt</h2>
-        <img src=”./img/Madryt-jakub-pala.jpg” alt=””>
-      </section>
+    <section>
+  <h2>Lizbona</h2>
+  <img src="img/Seul.jpg" alt="Seul">
+</section>
 
         <section class="berlin">
             <h2>Berlin</h2>
