Dodano sekcję Warszawa z obrazkiem

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             <img src=”./img/madryt.jpg” alt=”Madryt”> 
         </section> 
 
+        <section>
+        <h2>Warszawa</h2>
+        <img src="img/warszawa.jpg" alt="Widok na Warszawę">
+        <p>Warszawa, stolica Polski, jest dynamicznym miastem o bogatej historii. Znana z Pałacu Kultury i Nauki, Starego Miasta oraz nowoczesnej architektury, łączy tradycję z nowoczesnością.</p>
+      </section>
+        
+
     </main>
     <footer>
       <p>Projekt WSB Merito Gdańsk 2025</p>
