--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       <h1>Przewodnik po stolicach Europy</h1>
     </header>
     <main>
-    <section>
-  <h2>Lizbona</h2>
-  <img src="img/Seul.jpg" alt="Seul">
-</section>
+
 
         <section class="berlin">
             <h2>Berlin</h2>
@@ -51,7 +48,11 @@
             <h2>Madryt</h2> 
             <img src=”./img/madryt.jpg” alt=”Madryt”> 
         </section> 
-
+    <section>
+  <h2>Seul</h2>
+  <img src="img/Seul.jpg" alt="Seul">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit doloremque quidem numquam? Porro aliquid ducimus odio. Modi, nostrum corrupti harum mollitia, quae molestias beatae voluptate saepe, quibusdam quis totam sequi.</p>
+</section>
     </main>
     <footer>
       <p>Projekt WSB Merito Gdańsk 2025</p>
