--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img src="img/warszawa.jpg" alt="Widok na Warszawę">
         <p>Warszawa, stolica Polski, jest dynamicznym miastem o bogatej historii. Znana z Pałacu Kultury i Nauki, Starego Miasta oraz nowoczesnej architektury, łączy tradycję z nowoczesnością.</p>
       </section>
-        
-
-
-
+        <section> 
+            <h2>Madryt</h2> 
+            <img src=”./img/madryt.jpg” alt=”Madryt”> 
+        </section> 
         <section class="berlin">
             <h2>Berlin</h2>
             <img src="img/berlin.jpg" alt="Panorama Berlina">
