--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <h2>Madryt</h2> 
             <img src=”./img/madryt.jpg” alt=”Madryt”> 
         </section> 
+        
+        <section> 
+            <h2>Berlin2</h2> 
+            <img src=”./img/berlin-damian.jpg” alt=”Berlin2”> 
+        </section> 
 
     </main>
     <footer>
