--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit doloremque quidem numquam? Porro aliquid ducimus odio. Modi, nostrum corrupti harum mollitia, quae molestias beatae voluptate saepe, quibusdam quis totam sequi.</p>
 </section>
 
+      <section>
+        <h2>Bruksela</h2>
+        <img src="img/bruksela.jpg" alt="Bruksela">
+      </section>
     </main>
     <footer>
       <p>Projekt WSB Merito Gdańsk 2025</p>
