Dodanie opisu do sekcji o Brukseli

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <section>
         <h2>Bruksela</h2>
         <img src="img/bruksela.jpg" alt="Bruksela">
+        <p>Bruksela jest siedzibą króla i parlamentu belgijskiego, a ponadto jest siedzibą instytucji Unii Europejskiej, NATO i Euroatomu. Ważny ośrodek handlowy, bankowo-finansowy i kulturalno-naukowy kraju.</p>
       </section>
     </main>
     <footer>
