--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         <img src="img/bruksela.jpg" alt="Bruksela">
         <p>Bruksela jest siedzibą króla i parlamentu belgijskiego, a ponadto jest siedzibą instytucji Unii Europejskiej, NATO i Euroatomu. Ważny ośrodek handlowy, bankowo-finansowy i kulturalno-naukowy kraju.</p>
       </section>
+
+      <section>
+        <h2>Sztokholm</h2>
+        <img src="img/Sztokholm.jpg" alt="Sztokholm">
+        <p>Sztokholm to stolica Szwecji, położona na 14 wyspach połączonych ponad 50 mostami. Znana jest z pięknych widoków, nowoczesności i przyjaznego stylu życia.</p>
+      </section>
     </main>
     <footer>
       <p>Projekt WSB Merito Gdańsk 2025</p>
